plugins {
    id 'java'
    id 'org.springframework.boot'
}

apply plugin: 'io.spring.dependency-management'

java {
    sourceCompatibility = JavaVersion.VERSION_24
    targetCompatibility = JavaVersion.VERSION_24
}

sourceSets {
    main {
        java {
            srcDir 'src/main/java'
        }

        resources {
            srcDir 'src/main/resources'
            srcDir 'src/main/java'
        }
    }
}


processResources {
    duplicatesStrategy(DuplicatesStrategy.INCLUDE)
}

dependencies {
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:+'

    implementation 'com.google.code.gson:gson:+'
    implementation 'org.apache.commons:commons-text:+'
    implementation 'org.apache.commons:commons-lang3:+'

    runtimeOnly 'org.postgresql:postgresql:42.7.3'
    runtimeOnly 'com.mysql:mysql-connector-j:8.2.0'

    compileOnly 'org.projectlombok:lombok:1.18.38'
    testCompileOnly 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.38'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += "--enable-preview"
}